fix: Correcion de clientes, tatal invercion funciona y solo visibles para admin, botones de contacto funciona. boton de creacion de eventos

--- a/src/pages/admin/clientes.astro
+++ b/src/pages/admin/clientes.astro
@@ -1,4 +1,5 @@
 ---
+//src/pages/admin/clientes.astro
 import AdminLayout from '@/layouts/AdminLayout.astro';
 import { ClientsView } from '@/components/admin/clients/ClientsView';
 
