fix: capa extra para garantisar que las paginas publicas sean estaticas

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/contacto.astro
+export const prerender = true;
 import PageLayout from '@/layouts/PageLayout.astro';
 import { ContactForm } from '@/components/forms/ContactForm'; 
 import Card from '@/components/ui/Card.astro';
