--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/nosotros.astro
+export const prerender = true;
 import PageLayout from '@/layouts/PageLayout.astro';
 import { HeroServices } from '@/components/sections/HeroServices';
 import Button from '@/components/ui/Button.astro';
