--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/paquetes.astro
+export const prerender = true;
 import PageLayout from '@/layouts/PageLayout.astro';
 import { HeroServices } from '@/components/sections/HeroServices';
 import PackageCard from '@/components/sections/PackageCard.astro';
