--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/index.astro
+export const prerender = true;
 import PageLayout from '@/layouts/PageLayout.astro';
 import { Hero } from '@/components/sections/Hero';
 import Services from '@/components/sections/Services.astro';//revisar luego
