--- a/src/pages/portafolio.astro
+++ b/src/pages/portafolio.astro
@@ -1,4 +1,6 @@
 ---
+// src/pages/portafolio.astro
+export const prerender = true;
 import PageLayout from '@/layouts/PageLayout.astro';
 import { HeroServices } from '@/components/sections/HeroServices';
 import { PortfolioGrid } from '@/components/sections/PortfolioGrid';
